# AI-Media-Indexer

./: .dockerignore  .env.example  .gitignore  .wslconfig  Dockerfile  Dockerfile.asr  Dockerfile.cpu  Dockerfile.cuda  README.md  Sprints.md  TESTING.md  agent.json  agent_cli.py  agent_err.json  agent_main.py  architecture.d2  asr_server.py  audit.md  check_stats.py  clusters.json  config.py  conftest.py  core_d_err.txt  core_err_detailed.txt  core_remaining.txt  d104_err.txt  debug_clustering.py  debug_clustering_minimal.py  debug_output.txt  dlib_guide.md  doc_errors.json  docker-compose.graph.yaml  docker-compose.lite.yaml  docker-compose.qdrant.yaml  docker-compose.yaml  identity_graph.db  jobs.db  main.py  nuke.bat  output.txt  (+18 more)
.agent/: llm_coding_standards.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
api/: deps.py  schemas.py  server.py
api/routes/: __init__.py  agent.py  councils.py  events.py  faces.py  graph.py  grounding.py  identities.py  ingest.py  library.py  manipulation.py  media.py  overlays.py  search.py  system.py  tracking.py  voices.py
assets/: style.css
build-scripts/: setup-dlib.ps1  setup-dlib.sh
core/: __init__.py  errors.py  integration.py  protocols.py  schemas.py
core/agent/: __init__.py  a2a_server.py  card.py  cards.py  handler.py  server.py
core/ingestion/: __init__.py  celery_app.py  jobs.py  pipeline.py  scanner.py  tasks.py
core/ingestion/handlers/: __init__.py  audio.py
core/knowledge/: __init__.py  graph_builder.py  graph_store.py  schemas.py
core/llm/: text_factory.py  video_vlm.py  vlm_factory.py
core/manipulation/: __init__.py  arbiter.py  inpainting.py  painters.py  pipeline.py
core/orchestration/: __init__.py  agent_graph.py  orchestrator.py
core/processing/: __init__.py  academic_models.py  active_speaker.py  advanced_embeddings.py  asr_council.py  audio_analysis.py  audio_events.py  audio_levels.py  audio_structure.py  biometric_arbitrator.py  biometrics.py  celebrity_lookup.py  clock_reader.py  clothing_attributes.py  clustering.py  content_classifier.py  content_moderation.py  council_config.py  deep_research.py  dependency_check.py  depth_estimation.py  emotion_detector.py  enrichment.py  extractor.py  fingerprinting.py  frame_sampling.py  grounding_pipeline.py  identity.py  identity_linker.py  indic_transcriber.py  metadata.py  ner_extractor.py  object_detection.py  ocr.py  ocr_factory.py  pii_redactor.py  prober.py  saliency.py  scene_aggregator.py  scene_detector.py  (+17 more)
core/processing/analysis/: audio_analysis.py  cinematography.py  deep_research.py
core/processing/audio/: audio_events.py  transcriber.py
core/processing/metadata/: metadata.py
core/processing/vision/: content_moderation.py  extractor.py  frame_sampling.py  identity.py  ocr.py  scene_detector.py  segmentation.py  vision.py  visual_encoder.py
core/processors/: __init__.py  audio.py  identity.py  video.py
core/retrieval/: __init__.py  advanced_query.py  agentic_search.py  calibration.py  engine.py  graph.py  hitl_feedback.py  hybrid.py  hyper_granular_search.py  late_interaction.py  privacy.py  query_parser.py  rag.py  reranker.py  result_processor.py  schemas.py  search.py
core/storage/: __init__.py  clustering.py  db.py  filters.py  identity_graph.py  keyword_index.py  min_db.py  model_loader.py
core/tools/: privacy.py
core/tracking/: sam3_tracker.py
core/utils/: batch_extract.py  cancellation.py  device.py  filesystem.py  frame_sampling.py  hardware.py  locks.py  logger.py  media.py  model_warmer.py  normalize.py  observability.py  observe.py  platform_compat.py  progress.py  prompt_loader.py  resource.py  resource_arbiter.py  retry.py  streaming.py
docs/: ARCHITECTURE_BEFORE_VS_AFTER.md  FUTURE_RESEARCH_ROADMAP.md  MANUAL_TESTING.md  OPERATIONAL_GUIDE.md  architecture.md  configuration.md  development.md  setup_dlib.md  setup_docker.md  troubleshooting.md
llm/: __init__.py  factory.py  gemini.py  interface.py  ollama.py
prompts/: agent_chat_system.txt  agent_routing.txt  dense_multimodal.txt  dynamic_query.txt  eval_judge.txt  hyper_granular_decomposition.txt  ner_extraction.txt  orchestrator_routing.txt  query_decomposition.txt  query_parse.txt  rag_answer_generation.txt  rag_query_decomposition.txt  rerank_frames.txt  rerank_verification.txt  scene_summary.txt  search_expansion.txt  video_summary.txt  vision_prompt.txt  vlm_synthesis.txt
qdrant_data/: meta.json
qdrant_data/collection/faces/: storage.sqlite
qdrant_data/collection/media_segments/: storage.sqlite
scripts/: analyze_codebase.py  cleanup.py  fix_imports.py  install_native_nemo.ps1  install_native_nemo.sh  lint.ps1  reset_db.py  reset_docker.ps1  run_tests.py  setup_ai4bharat.ps1  system_health_check.py
tests/: __init__.py  agent_results.json  agent_verification_results.json  conftest.py  e2e_results.json  e2e_search_quality.py  golden_run.py  goldenrun.py  inspect_qdrant.py  inspect_qdrant_2.py  sanity_check.py  stress_test_memory.py  test_acceptance.py  test_agent.py  test_e2e.py  test_ingestion.py  test_performance.py  test_processing.py  test_smoke.py  test_storage.py  test_thumbnails.py  test_utils.py  verify_action_recognition.py  verify_agents.py  verify_api_response.py  verify_clustering.py  verify_decomposition.py  verify_e2e_hypergranular.py  verify_full_chain.py  verify_infrastructure.py  verify_physics.py  verifymcp.py
tools/: __init__.py  convert.py  diagnose_search.py  eval_quality.py  reset_db.py  stress_test.py  tune_search.py
web/: .gitignore  .prettierrc.cjs  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  theme.ts
web/src/api/: client.ts  faces.ts  media.ts  search.ts  voices.ts
web/src/components/: ClusterCard.tsx  FaceCard.tsx  JobCard.tsx
web/src/components/media/: MediaCard.tsx  SearchBar.tsx  VideoPlayer.tsx
web/src/pages/: Agent.tsx  Councils.tsx  Dashboard.tsx  Editor.tsx  Faces.tsx  Graph.tsx  Ingest.tsx  Search.tsx  Settings.tsx  VideoEditor.tsx  Voices.tsx  index.ts
web/src/types/: index.ts
(+1 files in other folders)
