[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_media_indexer"]

[project]
name = "ai-media-indexer"
version = "0.1.0"
description = "AI Media Indexer with SOTA Speech Recognition (NeMo/Whisper) and Voice Intelligence"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "black>=24.0.0",
    "cmake>=3.20.0",
    "cython>=3.0.0",
    "faster-whisper>=1.0.0",
    "hf-transfer>=0.1.0",
    "hf-xet>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "librosa>=0.10.0",
    "onnx==1.16.1",
    "ml_dtypes>=0.4.0,<0.5.0",
    # "nemo-toolkit[asr]>=1.23.0",
    "ninja>=1.11.0",
    "ollama>=0.3.0",
    "packaging",
    "pydantic>=2.0.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "ruff>=0.6.0",
    "scikit-learn>=1.5.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.40.0",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
    "ctranslate2>=4.6.1",
    "mcp>=1.23.2",
    "websockets>=15.0.1",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "colorama>=0.4.6",
    "a2a>=0.44",
    "python-a2a>=0.5.10",
    "numpy>=1.26.0,<2.0.0",
    "a2a-sdk[all,http-server]>=0.3.20",
    "opencv-python-headless>=4.8.0",
    "uvicorn>=0.38.0",
    "fastapi>=0.124.2",
    "pillow>=12.0.0",
    "pyannote.audio>=3.1.1",
]

[project.optional-dependencies]
dev = ["black>=24.0.0", "mypy>=1.10.0"]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ai_media_indexer"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]